@@ -100,6 +100,7 @@ Please note that our support for the checkout block is still experimental and th
 
 = 3.6.0 - 2022-xx-xx =
 * Fix - UPE validation error visibility on checkout page.
+* Tweak - Load translations for js files directly from lang-pack json files.
 * Add - Add support for full transaction exports.
 * Fix - Flag emoji rendering in currency switcher block widget
 
