@@ -2,6 +2,7 @@
 
 = 3.6.0 - 2022-xx-xx =
 * Fix - UPE validation error visibility on checkout page.
+* Tweak - Load translations for js files directly from lang-pack json files.
 * Add - Add support for full transaction exports.
 * Fix - Flag emoji rendering in currency switcher block widget
 
